MacViews: return screen coordinates for windowless events in |EventLocationFromNative|

Previously, we were returning 0,0 in this case. Returning screen coordinates matches
AppKit and is roughly congruent with what Windows does in this case.

Bug: 825834
Change-Id: I40082ba93d4f595c01ce98ca0c3f7289e56d05f2
Reviewed-on: https://chromium-review.googlesource.com/1078935
Reviewed-by: ccameron <ccameron@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Cr-Commit-Position: refs/heads/master@{#564217}
Former-commit-id: a7dcbe00932474e0e19b66d8cb4d2fa626ce5b54